# OpenTFRaw

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CORPUS.md  CREDITS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crates/opentfraw/: Cargo.toml
crates/opentfraw-py/: Cargo.toml
crates/opentfraw-py/src/: lib.rs
crates/opentfraw/src/: audit_tag.rs  bytes.rs  error.rs  generic_data.rs  lib.rs  mzml.rs  raw_file_info.rs  reader.rs  scan_event.rs  scan_format.rs  types.rs
crates/opentfraw/tests/: conformance.rs
docs/: docusaurus.config.ts  package.json  sidebars.ts  wrangler.jsonc
docs/docs/: changelog.md  install.md  intro.md  license.md  quickstart.md
docs/docs/format/: 00-overview.md  01-file-layout.md  02-sample-and-sequence.md  03-raw-file-info.md  04-run-header.md  05-scan-index-and-data.md  06-scan-event.md  07-scan-parameters.md  08-logs.md  11-references.md
docs/docs/guide/: instrument-families.md  mzml-export.md  reader.md  scan-data.md
docs/format/: 00-overview.md  02-sample-and-sequence.md  03-raw-file-info.md  04-run-header.md  06-scan-event.md  07-scan-parameters.md  09-enumerations.md  10-frequency-to-mz.md  README.md
examples/: dump.rs  probe.rs  srm_probe.rs  to_mzml.rs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
scripts/: fetch_corpus.py  sources.json  validate_mzml.py
src/: audit_tag.rs  device.rs  error_log.rs  generic_data.rs  header.rs  lib.rs  mzml.rs  reader.rs  run_header.rs  sample_info.rs  scan_data.rs  scan_event.rs  scan_filter.rs  scan_format.rs  scan_index.rs  seq_row.rs  types.rs
