[workspace]
resolver = "2"
members = ["crates/opentfraw", "crates/opentfraw-py"]

[workspace.package]
version = "1.0.4"
edition = "2021"
rust-version = "1.75"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenTFRaw"
homepage = "https://github.com/Sigilweaver/OpenTFRaw"
keywords = ["mass-spectrometry", "thermo", "raw", "proteomics", "orbitrap"]
categories = ["parser-implementations", "science"]

[workspace.dependencies]
opentfraw = { path = "crates/opentfraw" }
mass-spec-core = { path = "../mass-spec-core" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
numpy = "0.22"

[workspace.lints.rust]
unsafe_code = "forbid"
