[package]
name = "opentfraw-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for OpenTFRaw"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "opentfraw"
crate-type = ["cdylib"]

[dependencies]
tfraw = { path = "..", package = "opentfraw" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
numpy = "0.22"
