[package]
name = "opentfraw-py"
version = "1.0.3"
edition = "2021"
rust-version = "1.75"
description = "Python bindings for OpenTFRaw."
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenTFRaw"
publish = false

[lib]
name = "opentfraw"
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "allow"

[dependencies]
tfraw = { path = "..", package = "opentfraw" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
numpy = "0.22"
